# derive_bounded

./: Cargo.toml  LICENSE  README.md
.github/workflows/: derive_bounded.yml
src/: lib.rs
tests/: clone.rs  debug.rs  default.rs  partial_eq.rs
